--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.11.30",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "tsx": "^4.16.0",
     "typescript": "^5.5.0"
   }
