--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "seed": "tsx scripts/seed.ts",
-    "import:json": "tsx scripts/import-json.ts"
+    "import:json": "tsx scripts/import-json.ts",
+    "prebuild": "npm run db:push && npm run seed"
   },
   "dependencies": {
     "@libsql/client": "^0.6.0",
