--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "db:migrate": "drizzle-kit migrate",
     "seed": "tsx scripts/seed.ts",
     "import:json": "tsx scripts/import-json.ts",
-    "prebuild": "npm run db:push && npm run seed"
+    "prebuild": "tsx scripts/prebuild.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.6.0",
     "bcrypt": "^5.1.1",
-    "drizzle-orm": "^0.33.0",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.24.0",
+    "drizzle-orm": "^0.33.0",
     "next": "^15.0.0",
     "next-auth": "^4.24.8",
     "react": "^18.3.1",
