--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "prebuild": "tsx scripts/prebuild.ts"
   },
   "dependencies": {
-    "@libsql/client": "^0.6.0",
-    "bcrypt": "^5.1.1",
+    "@libsql/client": "^0.10.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.24.0",
     "drizzle-orm": "^0.33.0",
