Document admin credential seeding workflow

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ NEXTAUTH_URL=http://localhost:3000
 # Admin seed user
 ADMIN_EMAIL=admin@zozotech.local
 ADMIN_PASSWORD=changeme
+ALLOW_ADMIN_SEED=0
+ADMIN_SEED_SECRET=
 
 # UI defaults
 SITE_DEFAULT_NAME=ZOZOTECH
