--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.10.0",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.24.0",
